Подтягиваем почты из базы